[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/main_menu_background.png" type="Texture" id=2]
[ext_resource path="res://joe_rumbi.theme" type="Theme" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = -132.0
margin_right = 240.0
theme = ExtResource( 3 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 178.0
margin_bottom = 27.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 178.0
margin_bottom = 58.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../ExitButton")
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 178.0
margin_bottom = 89.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
